<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/card_color"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_list_nomor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_icao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/list_nomor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_list_nomor_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_petugas_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/petugas_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_nomor_label" />

    <TextView
        android:id="@+id/tv_list_petugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_list_petugas_label"
        app:layout_constraintTop_toTopOf="@+id/tv_list_petugas_label" />

    <TextView
        android:id="@+id/tv_list_waktu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/waktu_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_petugas_label" />

    <TextView
        android:id="@+id/tv_list_waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_list_waktu_label"
        app:layout_constraintTop_toTopOf="@+id/tv_list_waktu_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_detail_delete"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:background="@color/red"
        android:text="delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>